Add guest login funtions

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
       <h2 class="password-heading">Password:</h2>
         <input class="password-input" type="password" name="password" maxlength="12"/>
         <p class="password-error hidden">Password does not match</p>
-      <button class="enter">Log In</button>
+      <button class="guest-login">Log In</button>
       <button class="manager-login">Manager Log In</button> 
     </div>
     <div class="manager-view hidden">
-      <wrapper "manager-dashboard hidden">
+      <wrapper "manager-dashboard">
         <p class="today">Today's totals</p>
         <p class="manager">Total Rooms available for today</p>
         <p class="manager">Total revenue for today</p> 
