Add functionality for manager dashboard for total daily revenue

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       <wrapper "manager-dashboard">
         <p class="today">Today's totals</p>
         <p class="available-tonight">Total Rooms available for today</p>
-        <p class="manager">Total revenue for today</p> 
+        <p class="hotel-revenue">Total revenue for today</p> 
         <p class="manager">Percentage of rooms available for today</p>
       </wrapper>
       <wrapper>
