Add functionality for percent of rooms occupied for manager dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <p class="today">Today's totals</p>
         <p class="available-tonight">Total Rooms available for today</p>
         <p class="hotel-revenue">Total revenue for today</p> 
-        <p class="manager">Percentage of rooms available for today</p>
+        <p class="hotel-occupancy">Percentage of rooms available for today</p>
       </wrapper>
       <wrapper>
         <p class="manager hidden">User Name:</p>
