Add functionality to display all user reservation on guest dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
     </div>
     <div class="user-view hidden">
       <wrapper class="user-dashboard">
-        <p class="guest">My Bookings:</p>
-        <p class="guest">Total spent</p>
+        <p class="guest-bookings-display">My Bookings:</p>
+        <h3 class="guest">Total spent</h3>
       </wrapper>
       <wrapper class="user-search-results">
       </wrapper>
