Add functionality to dispy guest total on guest daskboard

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <div class="user-view hidden">
       <wrapper class="user-dashboard">
         <p class="guest-bookings-display">My Bookings:</p>
-        <h3 class="guest">Total spent</h3>
+        <h3 class="guest-total-spent">Total spent</h3>
       </wrapper>
       <wrapper class="user-search-results">
       </wrapper>
