Complete functionality for manager to search for guest and recieve results

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
         <input class="search-name-input hidden">
         <button class="search-name">Search</button>
       </wrapper>
-      <wrapper class="user-search-results">
-        <p>Results:</p>
+      <wrapper class="user-search-results hidden">
+        <p> All Bookings:</p>
       </wrapper>
       <wrapper>
     </div>
